# meta-tag-parser-qml

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp  meta_html_parser_qml.pro  qml.qrc
qml/: InputPanel.qml  MetaDataPanel.qml  main.qml
source/: GlobalPath.h  const_values.cpp  const_values.h  model_input_line.cpp  model_input_line.h
source/meta_parser/: file_download.cpp  file_download.h  handle_input.cpp  handle_input.h  og_parser.cpp  og_parser.h  og_parser_result.h
